{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 22,
  "lineage": "018aa7d8-411b-4afa-bd4c-da6ab87e6a3c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "firewall_inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0fef23adb2f9813a4_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0d3b5c6c632999b74",
            "transit_gateway_route_table_id": "tgw-rtb-0fef23adb2f9813a4"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_inspection",
            "aws_ec2_transit_gateway_vpc_attachment.firewall_post_inspection",
            "aws_subnet.tgw_subnet_a",
            "aws_subnet.tgw_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "on_prem_dc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.81.0.0/16",
            "id": "tgw-rtb-09dcda7d1a157318c_10.81.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-03a5ffb5b58f81a47",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "on_prem_dc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.82.0.0/16",
            "id": "tgw-rtb-09dcda7d1a157318c_10.82.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-03a5ffb5b58f81a47",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "on_prem_dc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.80.0.0/16",
            "id": "tgw-rtb-09dcda7d1a157318c_10.80.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-03a5ffb5b58f81a47",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "on_prem_dc_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.40.0.0/16",
            "id": "tgw-rtb-09dcda7d1a157318c_10.40.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-03a5ffb5b58f81a47",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "peering_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.190.0.0/16",
            "id": "tgw-rtb-09dcda7d1a157318c_10.190.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0ce714c844eb345dc",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "peering_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.191.0.0/16",
            "id": "tgw-rtb-09dcda7d1a157318c_10.191.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0ce714c844eb345dc",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "firewall_inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:transit-gateway-route-table/tgw-rtb-0fef23adb2f9813a4",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0fef23adb2f9813a4",
            "tags": {
              "Name": "rt_firewall_inspection"
            },
            "tags_all": {
              "Name": "rt_firewall_inspection",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "transit_gateway_id": "tgw-0f39b27356e944a44"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "firewall_post_inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:transit-gateway-route-table/tgw-rtb-09dcda7d1a157318c",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-09dcda7d1a157318c",
            "tags": {
              "Name": "rt_firewall_post_inspection"
            },
            "tags_all": {
              "Name": "rt_firewall_post_inspection",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "transit_gateway_id": "tgw-0f39b27356e944a44"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "firewall_post_inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09dcda7d1a157318c_tgw-attach-0d3b5c6c632999b74",
            "replace_existing_association": false,
            "resource_id": "vpc-028afaae91c6fa87c",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d3b5c6c632999b74",
            "transit_gateway_route_table_id": "tgw-rtb-09dcda7d1a157318c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway_route_table.firewall_post_inspection",
            "aws_ec2_transit_gateway_vpc_attachment.firewall_post_inspection",
            "aws_subnet.tgw_subnet_a",
            "aws_subnet.tgw_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "firewall_post_inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "dns_support": "enable",
            "id": "tgw-attach-0d3b5c6c632999b74",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-08c1185a3d0edf23c",
              "subnet-0dd54d8dd7ec39a0a"
            ],
            "tags": {
              "Name": "tgw-attachment-euw3-firewall-vpc"
            },
            "tags_all": {
              "Name": "tgw-attachment-euw3-firewall-vpc",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0f39b27356e944a44",
            "vpc_id": "vpc-028afaae91c6fa87c",
            "vpc_owner_id": "862334189785"
          },
          "dependencies": [
            "aws_subnet.tgw_subnet_a",
            "aws_subnet.tgw_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:internet-gateway/igw-0b9be1699ea593574",
            "id": "igw-0b9be1699ea593574",
            "owner_id": "862334189785",
            "tags": {
              "Name": "euw3-internet-gateway-egress"
            },
            "tags_all": {
              "Name": "euw3-internet-gateway-egress",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:862334189785:loadbalancer/gwy/lb-euw3-gwlb-palo-alto/b6a7dd2e8ccba765",
            "arn_suffix": "gwy/lb-euw3-gwlb-palo-alto/b6a7dd2e8ccba765",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:862334189785:loadbalancer/gwy/lb-euw3-gwlb-palo-alto/b6a7dd2e8ccba765",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "lb-euw3-gwlb-palo-alto",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c4bcb749ade53d6"
              },
              {
                "subnet_id": "subnet-0f03fbbc6e64f45a5"
              }
            ],
            "subnets": [
              "subnet-00c4bcb749ade53d6",
              "subnet-0f03fbbc6e64f45a5"
            ],
            "tags_all": {
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_subnet.gwlb_lb_subnet_a",
            "aws_subnet.gwlb_lb_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pa_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:862334189785:targetgroup/gwlb-target-group-pa-instances/00ec298ab465334f41",
            "arn_suffix": "targetgroup/gwlb-target-group-pa-instances/00ec298ab465334f41",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:862334189785:targetgroup/gwlb-target-group-pa-instances/00ec298ab465334f41",
            "lambda_multi_value_headers_enabled": false,
            "name": "gwlb-target-group-pa-instances",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "tags_all": {
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "add_route_jumphost_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.40.74.108/32",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b36787e01302e4292926589147",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b36787e01302e429",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0f39b27356e944a44",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.route_pa_subnet_mgmt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "add_route_to_tgw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0225a37ed415e33133423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0225a37ed415e3313",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0f39b27356e944a44",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.route_gwlb_endpoint_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "add_route_to_tgw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-093de68f078adc11a3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093de68f078adc11a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0f39b27356e944a44",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.route_gwlb_endpoint_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "add_route_to_vpce_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a6d228c98f63c651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a6d228c98f63c65",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-07411eaa2bb74896e",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.route_tgw_subnet_a",
            "aws_subnet.gwlb_endpoint_subnet_a",
            "aws_subnet.gwlb_lb_subnet_a",
            "aws_subnet.gwlb_lb_subnet_b",
            "aws_vpc.main",
            "aws_vpc_endpoint.firewall_pa_a",
            "aws_vpc_endpoint_service.firewall_pa",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "add_route_to_vpce_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01be644eff0f31bf91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01be644eff0f31bf9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-06a2408072138a415",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.route_tgw_subnet_b",
            "aws_subnet.gwlb_endpoint_subnet_a",
            "aws_subnet.gwlb_endpoint_subnet_b",
            "aws_subnet.gwlb_lb_subnet_a",
            "aws_subnet.gwlb_lb_subnet_b",
            "aws_vpc.main",
            "aws_vpc_endpoint.firewall_pa_a",
            "aws_vpc_endpoint.firewall_pa_b",
            "aws_vpc_endpoint_service.firewall_pa",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pa_egress_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9be1699ea593574",
            "id": "r-rtb-0791d5242ee90b85c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0791d5242ee90b85c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_pa_subnet_public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pa_egress_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9be1699ea593574",
            "id": "r-rtb-0d0ec71179e3049561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0ec71179e304956",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_pa_subnet_public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pa_mgmt_egress_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9be1699ea593574",
            "id": "r-rtb-0b36787e01302e4291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b36787e01302e429",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_pa_subnet_mgmt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_gwlb_endpoint_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0225a37ed415e3313",
            "id": "rtb-0225a37ed415e3313",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f39b27356e944a44",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-gwlb-endpoint-a"
            },
            "tags_all": {
              "Name": "rt-private-gwlb-endpoint-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_gwlb_endpoint_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-093de68f078adc11a",
            "id": "rtb-093de68f078adc11a",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f39b27356e944a44",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-gwlb-endpoint-b"
            },
            "tags_all": {
              "Name": "rt-private-gwlb-endpoint-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_gwlb_lb_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0030002e677310b94",
            "id": "rtb-0030002e677310b94",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-gwlb-lb-a"
            },
            "tags_all": {
              "Name": "rt-private-gwlb-lb-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_gwlb_lb_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0bd64172d0d23a14f",
            "id": "rtb-0bd64172d0d23a14f",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-gwlb-lb-b"
            },
            "tags_all": {
              "Name": "rt-private-gwlb-lb-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_pa_subnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0b36787e01302e429",
            "id": "rtb-0b36787e01302e429",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9be1699ea593574",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.40.74.108/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f39b27356e944a44",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-management-a-b"
            },
            "tags_all": {
              "Name": "rt-management-a-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_pa_subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0e854b25aa6d94fca",
            "id": "rtb-0e854b25aa6d94fca",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-pa-a"
            },
            "tags_all": {
              "Name": "rt-private-pa-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_pa_subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0df5002bc66954865",
            "id": "rtb-0df5002bc66954865",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-pa-b"
            },
            "tags_all": {
              "Name": "rt-private-pa-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_pa_subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0791d5242ee90b85c",
            "id": "rtb-0791d5242ee90b85c",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9be1699ea593574",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-pa-a"
            },
            "tags_all": {
              "Name": "rt-public-pa-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_pa_subnet_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-0d0ec71179e304956",
            "id": "rtb-0d0ec71179e304956",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9be1699ea593574",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-pa-b"
            },
            "tags_all": {
              "Name": "rt-public-pa-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tgw_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-01a6d228c98f63c65",
            "id": "rtb-01a6d228c98f63c65",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-07411eaa2bb74896e",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-tgw-a"
            },
            "tags_all": {
              "Name": "rt-private-tgw-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tgw_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:route-table/rtb-01be644eff0f31bf9",
            "id": "rtb-01be644eff0f31bf9",
            "owner_id": "862334189785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-06a2408072138a415",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-tgw-b"
            },
            "tags_all": {
              "Name": "rt-private-tgw-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "timeouts": null,
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_gwlb_endpoint_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007f1b5ba40f14a8c",
            "route_table_id": "rtb-0225a37ed415e3313",
            "subnet_id": "subnet-014f4477a14f27ef8"
          },
          "dependencies": [
            "aws_route_table.route_gwlb_endpoint_subnet_a",
            "aws_subnet.gwlb_endpoint_subnet_a",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_gwlb_endpoint_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a5154521e8d228",
            "route_table_id": "rtb-093de68f078adc11a",
            "subnet_id": "subnet-0e850641826323ac4"
          },
          "dependencies": [
            "aws_route_table.route_gwlb_endpoint_subnet_b",
            "aws_subnet.gwlb_endpoint_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_gwlb_lb_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b3592e87de00857",
            "route_table_id": "rtb-0030002e677310b94",
            "subnet_id": "subnet-00c4bcb749ade53d6"
          },
          "dependencies": [
            "aws_route_table.route_gwlb_lb_subnet_a",
            "aws_subnet.gwlb_lb_subnet_a",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_gwlb_lb_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae041f1ecb19e502",
            "route_table_id": "rtb-0bd64172d0d23a14f",
            "subnet_id": "subnet-0f03fbbc6e64f45a5"
          },
          "dependencies": [
            "aws_route_table.route_gwlb_lb_subnet_b",
            "aws_subnet.gwlb_lb_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pa_subnet_mgmt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79bb999466a4a79",
            "route_table_id": "rtb-0b36787e01302e429",
            "subnet_id": "subnet-0de5ca101c3576a3e"
          },
          "dependencies": [
            "aws_route_table.route_pa_subnet_mgmt",
            "aws_subnet.pa_subnet_mgmt_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pa_subnet_mgmt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1bab3eb40365827",
            "route_table_id": "rtb-0b36787e01302e429",
            "subnet_id": "subnet-04a5e7752a13f9dc5"
          },
          "dependencies": [
            "aws_route_table.route_pa_subnet_mgmt",
            "aws_subnet.pa_subnet_mgmt_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pa_subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fabf84605e1af62",
            "route_table_id": "rtb-0e854b25aa6d94fca",
            "subnet_id": "subnet-0a174f1bb3f620ffb"
          },
          "dependencies": [
            "aws_route_table.route_pa_subnet_private_a",
            "aws_subnet.pa_subnet_private_a",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pa_subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023394a0215469152",
            "route_table_id": "rtb-0df5002bc66954865",
            "subnet_id": "subnet-0e84b0c7e692ad7fb"
          },
          "dependencies": [
            "aws_route_table.route_pa_subnet_private_b",
            "aws_subnet.pa_subnet_private_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pa_subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c577d23e298eca8",
            "route_table_id": "rtb-0791d5242ee90b85c",
            "subnet_id": "subnet-043f13edca5dfb5a2"
          },
          "dependencies": [
            "aws_route_table.route_pa_subnet_public_a",
            "aws_subnet.pa_subnet_public_a",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_pa_subnet_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0613dd0304f4cbd85",
            "route_table_id": "rtb-0d0ec71179e304956",
            "subnet_id": "subnet-03bfb9bb66ad3c4bd"
          },
          "dependencies": [
            "aws_route_table.route_pa_subnet_public_b",
            "aws_subnet.pa_subnet_public_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_tgw_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b7ce609b598ed30",
            "route_table_id": "rtb-01a6d228c98f63c65",
            "subnet_id": "subnet-0dd54d8dd7ec39a0a"
          },
          "dependencies": [
            "aws_route_table.route_tgw_subnet_a",
            "aws_subnet.tgw_subnet_a",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_tgw_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3b06d9b2222ae9a",
            "route_table_id": "rtb-01be644eff0f31bf9",
            "subnet_id": "subnet-08c1185a3d0edf23c"
          },
          "dependencies": [
            "aws_route_table.route_tgw_subnet_b",
            "aws_subnet.tgw_subnet_b",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlb_endpoint_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-014f4477a14f27ef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "100.64.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014f4477a14f27ef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-gwlb-endpoint-a"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-gwlb-endpoint-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlb_endpoint_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-0e850641826323ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "100.64.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e850641826323ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-gwlb-endpoint-b"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-gwlb-endpoint-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlb_lb_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-00c4bcb749ade53d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "100.64.0.192/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c4bcb749ade53d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-gwlb-a"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-gwlb-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlb_lb_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-0f03fbbc6e64f45a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "100.64.0.208/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f03fbbc6e64f45a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-gwlb-b"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-gwlb-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa_subnet_mgmt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-0de5ca101c3576a3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.198.9.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de5ca101c3576a3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-mgmt-pa-a"
            },
            "tags_all": {
              "Name": "subnet-euw3-mgmt-pa-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa_subnet_mgmt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-04a5e7752a13f9dc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.198.9.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a5e7752a13f9dc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-mgmt-pa-b"
            },
            "tags_all": {
              "Name": "subnet-euw3-mgmt-pa-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa_subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-0a174f1bb3f620ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "100.64.0.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a174f1bb3f620ffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-pa-a"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-pa-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa_subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-0e84b0c7e692ad7fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "100.64.0.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e84b0c7e692ad7fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-pa-b"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-pa-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa_subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-043f13edca5dfb5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.198.9.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f13edca5dfb5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-public-pa-a"
            },
            "tags_all": {
              "Name": "subnet-euw3-public-pa-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa_subnet_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-03bfb9bb66ad3c4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.198.9.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bfb9bb66ad3c4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-public-pa-b"
            },
            "tags_all": {
              "Name": "subnet-euw3-public-pa-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-0dd54d8dd7ec39a0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "100.64.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd54d8dd7ec39a0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-tgw-a"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-tgw-a",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:subnet/subnet-08c1185a3d0edf23c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "100.64.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c1185a3d0edf23c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862334189785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-euw3-private-tgw-b"
            },
            "tags_all": {
              "Name": "subnet-euw3-private-tgw-b",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:vpc/vpc-028afaae91c6fa87c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.198.9.0/24",
            "default_network_acl_id": "acl-0767601c7b9b47e5a",
            "default_route_table_id": "rtb-054b373c8bd3f20db",
            "default_security_group_id": "sg-0d474a7361d2fdd3a",
            "dhcp_options_id": "dopt-0b36ea5fd86ac2d77",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028afaae91c6fa87c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054b373c8bd3f20db",
            "owner_id": "862334189785",
            "tags": {
              "Name": "vpc-euw3-firewall"
            },
            "tags_all": {
              "Name": "vpc-euw3-firewall",
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "firewall_pa_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:vpc-endpoint/vpce-07411eaa2bb74896e",
            "id": "vpce-07411eaa2bb74896e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07229e08babc810e8"
            ],
            "owner_id": "862334189785",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.eu-west-3.vpce-svc-006e631a2ecebe994",
            "state": "available",
            "subnet_ids": [
              "subnet-014f4477a14f27ef8"
            ],
            "tags_all": {
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.gwlb_endpoint_subnet_a",
            "aws_subnet.gwlb_lb_subnet_a",
            "aws_subnet.gwlb_lb_subnet_b",
            "aws_vpc.main",
            "aws_vpc_endpoint_service.firewall_pa",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "firewall_pa_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:862334189785:vpc-endpoint/vpce-06a2408072138a415",
            "id": "vpce-06a2408072138a415",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03d9f5f97bc61da74"
            ],
            "owner_id": "862334189785",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.eu-west-3.vpce-svc-006e631a2ecebe994",
            "state": "available",
            "subnet_ids": [
              "subnet-0e850641826323ac4"
            ],
            "tags_all": {
              "created_by": "yannick.vranckx.ext@luminus.be",
              "created_with": "terraform",
              "description": "Inspection Model",
              "domain": "Networking Services",
              "map-migrated": "mig39446"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-028afaae91c6fa87c"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.gwlb_endpoint_subnet_b",
            "aws_subnet.gwlb_lb_subnet_a",
            "aws_subnet.gwlb_lb_subnet_b",
            "aws_vpc.main",
            "aws_vpc_endpoint_service.firewall_pa",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    }
  ]
}